# habits_tracker

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
habits/: models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
users/: models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
